# server_tick_simulation

bevy-client/: Cargo.toml
bevy-client/src/: components.rs  hud.rs  main.rs
simulation-server/: Cargo.toml
simulation-server/src/: main.rs  tick.rs
